@@ -1,4 +1,7 @@
 
+2009-03-14 17:23 Ali aliov@xfce.org 
+	 * : Added desktop file to be installed in xdt/autostart
+
 2009-03-14 16:40 Ali aliov@xfce.org 
 	 * : Idle function to reduce screen luminosity after a certain time+fix a bug in the adapter code
 
